--- a/blocks/accordion/src/style.scss
+++ b/blocks/accordion/src/style.scss
@@ -1,40 +1,42 @@
 :root,
 body {
-	--shb-accordion-trigger-line-width: 18px;
-	--shb-accordion-trigger-line-height: 3px;
-	--shb-accordion-trigger-line-color: currentColor;
+	--wp-block-shb-accordion-trigger-line-width: 18px;
+	--wp-block-shb-accordion-trigger-line-height: 3px;
+	--wp-block-shb-accordion-trigger-line-color: currentColor;
 }
 
-.shb-accordion {
+.wp-block-shb-accordion {
+	// add shb/accordion styles here
+}
 
-	&__header {
-		display: flex;
-		align-items: center;
-		position: relative;
-		padding-top: var(--unit);
-		padding-bottom: var(--unit);
-		max-width: 100%;
-		justify-content: space-between;
-	}
+.wp-block-shb-accordion-content {
+	overflow: hidden;
 
-	&__title {
-		flex: auto;
-	}
-
-	&__content {
-		overflow: hidden;
-
-		&[aria-hidden='true'] {
-			@media screen {
-				opacity: 0;
-				max-height: 0;
-				margin-top: 0;
-				margin-bottom: 0;
-				* {
-					display: none;
-				}
+	&[aria-hidden='true'] {
+		@media screen {
+			opacity: 0;
+			max-height: 0;
+			margin-top: 0;
+			margin-bottom: 0;
+			* {
+				display: none;
 			}
 		}
+	}
+}
+
+.wp-block-shb-accordion-header {
+	display: flex;
+	align-items: center;
+	position: relative;
+	padding-top: var(--unit);
+	padding-bottom: var(--unit);
+	max-width: 100%;
+	justify-content: space-between;
+
+	&__title {
+		position: relative;
+		flex: auto;
 	}
 
 	&__trigger {
@@ -52,6 +54,7 @@ body {
 			left: 0;
 			width: 100%;
 			height: 100%;
+
 			&::after {
 				@media screen {
 					content: '';
@@ -66,7 +69,7 @@ body {
 		}
 
 		&[aria-expanded='false'] {
-			& > .shb-accordion__triggericon {
+			& > .wp-block-shb-accordion__triggericon {
 				&::before {
 					@media screen {
 						transform: translateY(-50%) rotate(90deg);
@@ -91,14 +94,13 @@ body {
 			@media screen {
 				content: '';
 				display: block;
-				width: var(--shb-accordion-trigger-line-width);
-				height: var(--shb-accordion-trigger-line-height);
-				background-color: var(--shb-accordion-trigger-line-color);
+				width: var(--wp-block-shb-accordion-trigger-line-width);
+				height: var(--wp-block-shb-accordion-trigger-line-height);
+				background-color: var(--wp-block-shb-accordion-trigger-line-color);
 				position: absolute;
 				top: 50%;
 				right: 0;
 			}
 		}
 	}
-
 }
